@@ -965,6 +965,38 @@ hwloc_utils_get_best_node_in_array_by_memattr(hwloc_topology_t topology, hwloc_m
   return -1;
 }
 
+enum hwloc_utils_cpuset_format_e {
+  HWLOC_UTILS_CPUSET_FORMAT_UNKNOWN,
+  HWLOC_UTILS_CPUSET_FORMAT_HWLOC,
+  HWLOC_UTILS_CPUSET_FORMAT_TASKSET,
+  HWLOC_UTILS_CPUSET_FORMAT_LIST
+};
+
+static __hwloc_inline enum hwloc_utils_cpuset_format_e
+hwloc_utils_parse_cpuset_format(const char *string)
+{
+  if (!strcmp(string, "hwloc"))
+    return HWLOC_UTILS_CPUSET_FORMAT_HWLOC;
+  else if (!strcmp(string, "list"))
+    return HWLOC_UTILS_CPUSET_FORMAT_LIST;
+  else if (!strcmp(string, "taskset"))
+    return HWLOC_UTILS_CPUSET_FORMAT_TASKSET;
+  else
+    return HWLOC_UTILS_CPUSET_FORMAT_UNKNOWN;
+}
+
+static __hwloc_inline int
+hwloc_utils_cpuset_format_asprintf(char **string, hwloc_const_bitmap_t set,
+                                   enum hwloc_utils_cpuset_format_e cpuset_output_format)
+{
+  switch (cpuset_output_format) {
+  case HWLOC_UTILS_CPUSET_FORMAT_HWLOC: return hwloc_bitmap_asprintf(string, set);
+  case HWLOC_UTILS_CPUSET_FORMAT_TASKSET: return hwloc_bitmap_taskset_asprintf(string, set);
+  case HWLOC_UTILS_CPUSET_FORMAT_LIST: return hwloc_bitmap_list_asprintf(string, set);
+  default: abort();
+  }
+}
+
 static __hwloc_inline unsigned long
 hwloc_utils_parse_restrict_flags(char * str){
   struct hwloc_utils_parsing_flag possible_flags[] = {
