@@ -2,11 +2,11 @@
 0x0000000f
 0x000000f0
 
-# 4 sets out of 2 2 2
-0x00000003
-0x0000000c
-0x00000030
-0x000000c0
+# 4 sets out of 2 2 2, as lists
+0-1
+2-3
+4-5
+6-7
 
 # 8 sets out of 2 2 2
 0x00000001
