@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.\" Copyright © 2009-2023 Inria.  All rights reserved.
+.\" Copyright © 2009-2024 Inria.  All rights reserved.
 .\" Copyright © 2009-2010 Université of Bordeaux
 .\" Copyright © 2009-2010 Cisco Systems, Inc.  All rights reserved.
 .\" Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.
@@ -141,9 +141,14 @@ Display the cpuset of each object.
 Only display the cpuset of each object; do not display anything else
 about the object.
 .TP
-\fB\-\-taskset\fR
-Show CPU set strings in the format recognized by the taskset command-line
-program instead of hwloc-specific CPU set string format.
+\fB\-\-cpuset\-output\-format\fR <hwloc|list|taskset> \fB\-\-cof\fR <hwloc|list|taskset>
+Change the format of displayed CPU set strings.
+By default, the hwloc-specific format is used.
+If \fIlist\fR is given, the output is a comma-separated of numbers or ranges,
+e.g. 2,4-5,8 .
+If \fItaskset\fR is given, output cpusets are compatible with the taskset program
+(replaces the former \fB--taskset\fR option).
+
 This option should be combined with \fB\-\-cpuset\fR or \fB\-\-cpuset\-only\fR,
 otherwise it will imply \fB\-\-cpuset\fR.
 .TP
